<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pink"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ua.kh.itstep.myloginapplication.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_close_white_24dp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:textColor="@color/textColor"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/first_name"
            android:textColor="@color/textColor"
            android:textSize="12dp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="-9.5dp"
            android:background="@color/light_gray" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/last_name"
            android:textColor="@color/textColor"
            android:textSize="12dp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="-9.5dp"
            android:background="@color/light_gray" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="12dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="-9.5dp"
            android:background="@color/light_gray" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="12dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="-9.5dp"
            android:background="@color/light_gray" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/app_compat_button_style"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/action_register"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>

</LinearLayout>
